// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"it applies a theme 'baseColor' to the success icon" 1`] = `
.c0 {
  min-height: 70%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: auto;
}

.c1 {
  min-width: 11.428571428571429rem;
  width: 11.428571428571429rem;
  height: 5.714285714285714rem;
}

.c1 .customColor {
  fill: #4400FF !important;
}

.c2 {
  font-weight: 700;
}

.c2:not(:disabled) {
  color: !important;
  fill: !important;
}

.c2:not(:disabled),
.c2:not(:disabled):hover,
.c2:not(:disabled):active,
.c2:not(:disabled):focus {
  color: !important;
  fill: !important;
}

.c3 {
  margin: 0.35714285714285715rem;
  color: #2f3941;
}

<div>
  <div
    class="c0"
  >
    <svg
      class="c1"
      realfilename="talk_success.svg"
    />
    <div>
      <h2
        class="c2"
      >
        Thanks for reaching out.
      </h2>
      <p
        class="c3"
      >
        We'll get back to you soon.
      </p>
    </div>
  </div>
</div>
`;

exports[`renders a success notification 1`] = `
.c0 {
  min-height: 70%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: auto;
}

.c1 {
  min-width: 11.428571428571429rem;
  width: 11.428571428571429rem;
  height: 5.714285714285714rem;
}

.c2 {
  font-weight: 700;
}

.c2:not(:disabled) {
  color: !important;
  fill: !important;
}

.c2:not(:disabled),
.c2:not(:disabled):hover,
.c2:not(:disabled):active,
.c2:not(:disabled):focus {
  color: !important;
  fill: !important;
}

.c3 {
  margin: 0.35714285714285715rem;
  color: #2f3941;
}

<div>
  <div
    class="c0"
  >
    <svg
      class="c1"
      realfilename="talk_success.svg"
    />
    <div>
      <h2
        class="c2"
      >
        Thanks for reaching out.
      </h2>
      <p
        class="c3"
      >
        We'll get back to you soon.
      </p>
    </div>
  </div>
</div>
`;
